@@ -1,6 +1,6 @@
-FROM openjdk:8-jdk-slim
+FROM openjdk:11-jdk-slim
 ENV PORT 8080
 EXPOSE 8080
 
-COPY *.jar app.jar
-CMD ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "app.jar"]
+COPY target/*.jar app.jar
+CMD ["java", "-XX:+UseG1GC", "-jar", "app.jar"]
